--- a/C#学习日记/L10_枚举和结构___2022-12-28.md
+++ b/C#学习日记/L10_枚举和结构___2022-12-28.md
@@ -16,13 +16,25 @@ tags:
   - [枚举量](#枚举量)
   - [枚举只是int](#枚举只是int)
   - [小总结](#小总结)
-- [结构类型](#结构类型)
+- [结构](#结构)
   - [声明](#声明)
   - [注意点](#注意点)
   - [初始化](#初始化)
   - [调用](#调用)
   - [运算](#运算)
   - [结构指针](#结构指针)
+- [结构与函数](#结构与函数)
+  - [结构作为函数的参数和返回值](#结构作为函数的参数和返回值)
+  - [输入结构](#输入结构)
+    - [错误示范](#错误示范)
+- [结构中的结构](#结构中的结构)
+  - [结构数组](#结构数组)
+  - [指针](#指针)
+  - [自定义类型定义](#自定义类型定义)
+- [联合](#联合)
+  - [语法](#语法-1)
+  - [特点](#特点)
+  - [用法](#用法)
 
 
 - - -
@@ -77,7 +89,7 @@ tags:
 也就是比起使用多次`const int`方便的时候  
 才会选择使用枚举  
 
-## 结构类型
+## 结构
 > 要用一个整体表示  
 > 一个人的名字, 生日...    
 > 时间的年月日...  
@@ -142,3 +154,143 @@ struct 结构类型 结构变量2 = {.成员类型1=7, .成员类型3=6.4};
 ### 结构指针
 和数组有所区别, 结构变量的**名字**不是地址  
 必须使用`&`运算符取地址
+
+## 结构与函数  
+### 结构作为函数的参数和返回值
+`type function_name(struct struct_name para)`  
+这个函数的参数是一个 **结构变量**  
++ **整个结构**可以作为**参数的值**传入函数  
++ 其实质是, 在函数内**新建**一个结构变量,  
+  并**复制**调用者的结构的值  
+  > 函数内发生的不会影响传入的那个结构  
+  > 因为函数内部的是**新的**结构  
+  > 注意区别于数组  
++ 可以**返回结构**
+
+### 输入结构  
+没有直接的方式可以一次***scanf***一个结构  
+可以自己写一个函数实现  
+
+#### 错误示范  
+```
+struct point
+{
+    int x;
+    int y;
+};
+
+void inputStruct(struct point p);
+void outputStruct(struct point p);
+
+int main()
+{
+    struct point p0 = {0, 0};
+    inputStruct(p0);
+    outputStruct(p0);
+    return 0;
+}
+
+void inputStruct(struct point p)
+{
+    scanf("%d", &p.x);
+    scanf("%d", &p.y);
+    printf("在inputStruct中:\n");
+    printf("x: %d\ny: %d\n", p.x, p.y);
+}
+void outputStruct(struct point p)
+{
+    printf("在outputStruct中:\n");
+    printf("x: %d\ny: %d\n", p.x, p.y);
+}
+```
+输入:  `12 23`
+输出结果:  
+```
+12 23
+在inputStruct中:
+x: 12
+y: 23
+在outputStruct中:
+x: 0
+y: 0
+```
+这里***main***函数中定义的`p0`并未改变  
+这是因为, 传入的参数是复制过去的`p`, 已经不是`p0`了  
+
+## 结构中的结构
+### 结构数组  
+`struct point points[] = {{x1,x2}, {1,2}, {0,0}};`  
+> 举例来说  
+> 一个**矩形**可以用*左上角*和*右下角*两个**点**来确定  
+> 每个**点**, 又是由两个**坐标**组成的  
+> 这时候就产生了嵌套的结构, 此时定义一个矩形的方式如下
+
+```
+struct point
+{
+    int x;
+    int y;
+};
+struct rectangle{
+    struct point pt1;
+    struct point pt2;
+};
+struct rectangle r;
+```
+
+这里的**矩形** `r` 有四个值:  
+ + `r.pt1.x`
+ + `r.pt1.y`
+ + `r.pt2.x`
+ + `r.pt2.y`
+
+### 指针
+仍旧以矩形为例, 此时如果再定义一个**矩形**指针`*rp`:  
+`struct rectangle r,*rp;`  
+那么有四个形式是等价的:  
+ + `r.pt1.x`
+ + `rp->pt1.x`
+ + `(r.pt1).x`
+ + `(rp->pt1).x`
+
+注意, 以下这个形式是错误的:
+ + `rp->pt1->x`  
+
+> 因为`pt1`是结构, 不是指针
+
+### 自定义类型定义
+> 在定义完一个结构之后, 每次使用都必须在前面加上***struct***  
+> 这给人以一种 *"不是亲生"* 的感觉...  
+> ***typedef***就允许你"真正"使用自定义的数据类型  
+
+***typedef***用以声明一个已有数据类型的 **别名**  
+`typedef int Length;`  
+声明后, 两者用法一致
+```
+typedef struct ADate{...} Date;
+Date d = {...};
+```
+> 在使用结构时, ***typedef***尤其方便
+> 上面的例子中, `ADate`可以省略不写, 因为最后实际使用的是`Date`
+
+## 联合  
+**联合** (***union***) 在表面上看起来与 **结构**(***struct***)是极为相似的  
+### 语法 
+```
+union Test
+{
+    int i;
+    char c;
+} union1, union2;
+```
+
+### 特点  
+ + ***union***的每个成员 **都占据同一块空间**
+ + 对其中一个成员赋值, 会覆盖掉其他成员  
+
+### 用法  
+最常用的场合, 是查看数据在内存中的 **储存形式**  
+例如一个联合中有`i`和`char[sizeof(int)]`这两个成员  
+当`i`中写入一个整数后, 可以通过遍历`char`数组查看**每个字节的值**  
+这有助于我们理解数据内部存储的情况  
+同时, 在做文件处理时, 也可以用这种方式将数据转化为二进制处理  
