--- a/C#学习日记/L9_字符串___2022-12-18.md
+++ b/C#学习日记/L9_字符串___2022-12-18.md
@@ -35,8 +35,18 @@ tags:
     - [说明](#说明-1)
 - [字符串函数](#字符串函数)
   - [所用的库](#所用的库)
-    - [strlen](#strlen)
+  - [strlen](#strlen)
   - [strcmp](#strcmp)
+  - [strcpy](#strcpy)
+    - [复制一个字符串](#复制一个字符串)
+    - [可能的实现形式](#可能的实现形式)
+  - [strcat](#strcat)
+    - [安全问题](#安全问题)
+    - [安全的版本](#安全的版本)
+  - [strchr](#strchr)
+    - [寻找第二个字符](#寻找第二个字符)
+    - [得到第一个配对之前的字符串](#得到第一个配对之前的字符串)
+  - [strstr](#strstr)
 - [关于输入输出 和 SHELL的一些知识](#关于输入输出-和-shell的一些知识)
   - [什么是SHELL?](#什么是shell)
   - [为什么敲回车程序才继续?](#为什么敲回车程序才继续)
@@ -276,9 +286,9 @@ int main(int argc, char const *argv[])
 ## 字符函数
 ### 单个字符输入 putchar
 #### 语法
-原型  
+**原型**  
 `int putchar(int c);`  
-使用  
+**使用**  
 `putchar('a')`  
 
 #### 说明
@@ -291,9 +301,9 @@ int main(int argc, char const *argv[])
 
 ### 单个字符输出 getchar
 #### 语法
-原型  
+**原型**  
 `int getchar(void);`  
-使用  
+**使用**  
 `char a = getchar()`  
 
 #### 说明  
@@ -311,10 +321,10 @@ int main(int argc, char const *argv[])
  + `strchr`
  + `strstr`
 
-#### strlen
-原型: `size_t strlen(const char *s);`  
-作用: 返回`s`的字符串的长度(**不包括末尾的0**)  
-备注: **len** 是 **length** 的缩写  
+### strlen
+**原型**: `size_t strlen(const char *s);`  
+**作用**: 返回`s`的字符串的长度(**不包括末尾的0**)  
+**备注**: **len** 是 **length** 的缩写  
   
 可能的实现形式:  
 ```
@@ -327,9 +337,9 @@ int mylen(const char* s){
 ```
 
 ### strcmp
-原型: `int strcmp(const char *s1, const char *s2);`  
-作用: 比较两个字符串是否相等  
-返回值:
+**原型**: `int strcmp(const char *s1, const char *s2);`  
+**作用**: 比较两个字符串是否相等  
+**返回值**:
  + `0`: 表示两者相等  
  + 大于零: 表示前者**大于**后者  
  + 小于零: 表示前者**小于**后者  
@@ -372,6 +382,144 @@ int mycmp(const char *s1, const char *s2)
 
 > 有一些编译器的***strcmp***只会返回`0`或者`±1`  
 > 那这个时候返回值可以改写为三元表达式, 能达到相同效果
+
+### strcpy
+**原型**: `char* strcpy(char *restrict dst, const char *restrict src);`  
+> 关键字: ***restrict***表明`src`和`dst`不能**重叠**  
+> > **"重叠"** 就是说`dst`可能就在`src`的前方, "拷贝"的动作会覆盖原字符  
+
+**作用**: 把`src`的字符拷贝到`dst`   
+**返回值**: 就是`dst`  
+**注意**: 参数先`dst`后`src`   
+
+#### 复制一个字符串
+```
+char *dst = (char *)malloc(strlen(src) + 1);
+strcpy(dst, src);
+```
+一个小套路, 先申请动态分配空间, 确保这里的`dst`不会涉及其他内存, 是独立的存在  
+**注意**: 别漏了`+1`  
+
+#### 可能的实现形式
++ 数组
+```
+char* mycpy(char *dst, const char *src)
+{
+    int index = 0;
+    while (src[index]!='\0')
+    {
+        dst[index] = src[index];
+        index++;
+    }
+    dst[index] = '\0';
+    return dst;
+}
+```
+
++ 指针
+```
+char* mycpy(char *dst, const char *src)
+{
+    char *result = dst;
+    while (*dst++=*src++)
+        ;
+    return result;
+}
+```
+
+> 事实上, 无论代码怎么精简, 编译之后效率是一样的  
+> 写的很精简只会令人难以理解(可以看做是一种另类的锻炼方式吧)
+
+### strcat
+**原型**: `char* strcat(char *restrict s1, const char *restrict s2);`  
+**作用**: 吧`s2`拷贝到`s1`后面, 接成更长的字符串  
+> 实质还是一种拷贝  
+> 其实就是把`s2`的第一个字符拷贝到`s1`最后的`\0`  
+
+
+**返回值**: `s1`  
+
+#### 安全问题  
+`strcpy`与`strcat`都存在明显的安全隐患  
+即, **盲目的写入**  
+这很可能会覆盖掉其他需要的数据  
+
+#### 安全的版本
++ 对于***cpy***   
+  `char* strncpy(char *restrict dst, const char *restrict src, size_t n);`  
+
++ 对于***cat***  
+  `char* strncat(char *restrict s1, const char *restrict s2, size_t n);`  
+
+上述两个函数多了一个参数`n`  
+`n`表示 **目的地最多能容纳多少字符**  
+如果超出了这个值, 多余的会被掐掉  
+因此不存在越界问题  
+
++ 对于***cmp***  
+   `int strncmp(const char *s1, const char *s2, size_t n);`  
+
+这里其实并非是出于"安全"目的而设计这个函数  
+这个`n`表示仅仅比较两个字符串的前`n`位, 其余忽略  
+
+### strchr
+**原型**:  
++ `char * strchr(const char *s, int c);`  
++ `char * strrchr(const char *s, int c);`  
+
+**作用**: 在字符串`s`中寻找字符  
+后者只是在名字上多了一个'r', 表示从右边开始找  
+
+**返回值**:  
+返回那个字符的指针  
+没有找到返回 ***null***  
+
+#### 寻找第二个字符
+```
+char str[] = "zhyDaDa";
+char *p = strchr(str, 'D');
+p = strchr(p + 1, 'D');
+printf("%s\n", p);
+```
+这里当找到第一个'D'后得到了其指针`p`,  
+此时的`p`可以看做是一个字符串(因为后面有`'\0'`)  
+从`p`的后面一个字符找起, 即得到第二个'D'  
+
+#### 得到第一个配对之前的字符串
+```
+char str[] = "zhyDaDa";
+char *p = strchr(str, 'D');
+char *t = (char *)malloc(strlen(str) + 1);
+char c = *p;
+*p = '\0';
+strcpy(t, str);
+*p = c;
+printf("str: %s\n", str);
+printf("p: %s\n", p);
+printf("t: %s\n", t);
+printf("c: %c\n", c);
+free(t);
+```
+输出的结果是:  
+```
+str: zhyDaDa
+p: DaDa
+t: zhy
+c: D
+```  
+这里用了一个非常巧妙的小技巧  
+即, 将扫描到的第一个匹配改写成`'\0'`  
+这样原来的字符串就缩减到了第一个匹配之前的字符串  
+当然这之后还要改回去, `c`就是临时储存的被改掉的字符  
+
+### strstr  
+**原型**: 
++ `char * strstr(const caht *s1, const char *s2);`
++ `char * strcasestr(const caht *s1, const char *s2);`  
+
+**作用**: 前者在一个字符串中寻找字符串  
+后者的区别是, 在名称上多了一个"case"  
+ta在寻找字符串的时候会 **忽略大小写**  
 
 
 ## 关于输入输出 和 SHELL的一些知识  
