换个文件夹

--- a/notes/Js笔记___2022-07-23_11-20.md
+++ b/notes/Js笔记___2022-07-23_11-20.md
@@ -9,6 +9,16 @@
   - [高阶函数](#高阶函数)
   - [循环](#循环)
 - [字符串](#字符串)
+- [Audio](#audio)
+  - [AudioContext](#audiocontext)
+    - [声明](#声明)
+    - [方法](#方法)
+  - [AnalyserNode](#analysernode)
+    - [声明](#声明-1)
+    - [方法](#方法-1)
+  - [AudioBuffer 和 buffer](#audiobuffer-和-buffer)
+    - [声明](#声明-2)
+    - [例子](#例子)
 - [实/常/有 用的函数](#实常有-用的函数)
   - [时间戳](#时间戳)
   - [JSON](#json)
@@ -256,6 +266,111 @@
 < NaN
 ```
 
+# Audio
+所有工作都在**AudioContext**中实现  
+这个对象包含有很多个节点(nodes), 各司其职  
+一般的工作流程如下:  
+ 1. 创建一个**AudioContext**
+ 2. 在AudioContext中，创建**声源节点**——例如`<audio>`标签，振动发声器 (oscillator)，音频流(stream)
+ 3. 创建**特效节点**——例如混响，双二阶滤波，声相控制，音频振幅压缩
+ 4. 选择音频的**终点**——例如系统的扬声器
+ 5. **连接**声源和特效，以及特效和终点。
+
+> `AudioContext`
+> > `Inputs` =\> `Effects` =\> `Destination` 
+
+## AudioContext
+### 声明
+> var audioCtx = new AudioContext;
+
+跨浏览器的通用方法:  
+```
+var AudioContext = window.AudioContext || window.webkitAudioContext;
+var audioCtx = new AudioContext();
+```
+
+### 方法
+> audioCtx.close();
+- **作用:** 释放占用的系统资源, 停止处理音频
+- **返回:** promise
+- **备注:** 可以接then处理后续动作
+```
+audioCtx.close().then(function() { ... });
+```
+
+> audioCtx.suspend();
+> audioCtx.resume();
+- **作用:** 暂停和继续
+- **返回:** promise
+- **备注:** 如果返回失败, 就说明audioCtx已经被关闭
+
+## AnalyserNode
+### 声明  
+> var analyser = audioCtx.createAnalyser();
+
+### 方法
+> analyser.getFloatFrequencyData(array);
+> analyser.getByteFrequencyData(array);
+- **作用:** 获取频率数据, 并以数组形式储存, 前者是32位浮点, 后者是Uint8Array（无符号字节数组）
+- **返回:** 数组
+- **备注:** 此数组表示的频率范围为 0 ~ 22050 Hz，每个元素表示对应频率上的信号分量强度，单位为分贝
+
+## AudioBuffer 和 buffer
+缓存区（buffer）包含以下数据：不间断的 IEEE754 32 位线性 PCM，**从 -1 到 1 的范围额定**，就是说，32 位的浮点缓存区的每个样本在 -1.0 到 1.0 之间。
+### 声明
+> var audioBuffer = new AudioBuffer(context[, options]);
+- **作用:** 创建一个新的 AudioBuffer 对象
+- **返回:** 一个新的 AudioBuffer 对象实例
+- **参数:** 
+  + context: audioCtx
+  + option可选参数  
+    - length: buffer 中采样帧的长度。
+    - numberOfChannels: buffer 的通道数。默认值为 1.
+    - sampleRate: buffer 的采样率 (Hz). 默认值为构造此对象时使用的 context 的采样率。
+
+> AudioContext.createBuffer(Number numOfChannels, Number length, Number sampleRate);
+- **作用:** 建一个空白的 AudioBuffer 对象
+- **返回:** 一个 AudioBuffer
+- **参数:** 
+  + numOfChannels 
+一个定义了 buffer 中包含的声频通道数量的整数。 一个标准的实现必须包含至少 32 个声频通道。
+
+  + length  
+一个代表 buffer 中的样本帧数的整数。
+
+  + sampleRate  
+线性音频样本的采样率，即每一秒包含的关键帧的个数。实现过程中必须支持 22050 ～ 96000 的采样率。
+
+> var source = audioCtx.createBufferSource()
+- **作用:** 建立一个一个 AudioBufferSourceNode 节点
+- **参数:** 参数的说明
+- **注意:**   
+  一个 AudioBufferSourceNode **只能被播放一次**，也就是说，每次调用 start() (en-US) 之后，如果还想再播放一遍同样的声音，那么就需要再创建一个 AudioBufferSourceNode。
+
+### 例子
+```
+// 创建一个双声道的缓冲
+var myArrayBuffer = audioCtx.createBuffer(2, frameCount, audioCtx.sampleRate)
+// 提取其中一个声道的缓冲, 可以以数组的方式修改它
+var nowBuffering = myArrayBuffer.getChannelData(0);
+for (var i = 0; i < frameCount; i++) {
+  // audio needs to be in [-1.0; 1.0]
+  nowBuffering[i] = Math.random() * 2 - 1;
+}
+
+// 要想播放缓冲, 就要有一个资源节点
+var source = audioCtx.createBufferSource();
+// 把刚才处理好的缓冲交过去
+source.buffer = myArrayBuffer;
+
+// 最后把这个资源绑定到最终的节点上去
+source.connect(audioCtx.destination);
+// 在最终的节点上实现播放动作 
+source.start();
+```
+
+
+
 # 实/常/有 用的函数
 ## 时间戳
 > Date.now()  
@@ -404,6 +519,15 @@ a.click();
 - **作用:** 如题
 ```
 location.reload();
+```
+
+> 消除所有定时器
+- **作用:** 如题
+```
+let end = setInterval(function () { }, 10000);
+for (let i = 1; i <= end; i++) {
+    clearInterval(i);
+}
 ```
 
 # 参考来源
