js笔记持续更新

--- a/notes/Js笔记___2022-07-23_11-20.md
+++ b/notes/Js笔记___2022-07-23_11-20.md
@@ -19,6 +19,15 @@
   - [AudioBuffer 和 buffer](#audiobuffer-和-buffer)
     - [声明](#声明-2)
     - [例子](#例子)
+- [异步处理](#异步处理)
+  - [promise](#promise)
+    - [构造promise](#构造promise)
+    - [resolve和reject](#resolve和reject)
+    - [then和catch](#then和catch)
+  - [JS引擎的执行顺序](#js引擎的执行顺序)
+    - [同步任务和异步任务](#同步任务和异步任务)
+    - [宏任务和微任务](#宏任务和微任务)
+    - [总结](#总结)
 - [实/常/有 用的函数](#实常有-用的函数)
   - [时间戳](#时间戳)
   - [JSON](#json)
@@ -369,7 +378,93 @@ source.connect(audioCtx.destination);
 source.start();
 ```
 
+# 异步处理
+## promise
+***promise***是一个 **构造函数**, 传入一个要运行的函数`M`作为参数, 返回一个 ***promise*** **实例**  
+在M运行过程中, 会调用两个函数(`resolve`和`reject`)表示完成与否  
+紧接着***promise***实例后有`then`和`catch`这两个回调函数, 他们会根据***promise***的返回传递参数, 调用相应函数  
 
+***promise***有三种状态:   
+  1. **Fulfilled**: has-resolved, 表示成功解决，这时会调用 onFulfilled.
+  2. **Rejected**: has-rejected, 表示解决失败，此时会调用 onRejected.
+  3. **Pending**: unresolve, 表示待解决，既不是resolve也不是reject的状态。也就是promise对象刚被创建后的初始化状态.
+
+> `resolve`和`reject` 用来切换状态  
+> `then`和`catch` 用来感知状态
+
+
+### 构造promise  
+```
+let M = new Promise((resolve, reject) => {
+    if(done)
+        resolve(data.done); //处理成功
+    if(!done)
+        reject(data.fail); //处理成功
+});
+```
+这里***Promise***构造器接受一个函数(一般是 *无名函数* ), 这个函数有**两个参数**  
+参数是两个**函数名**, 一般是`resolve`和`reject`  
+无名函数的内部就是要运行的函数了  
+***promise*** **实例**构造完成就开始运行  
+下一轮**Event Loop**就无效了  
+> 原因很简单: 状态显示的不是 **Pending**, 说明已经完成了
+
+### resolve和reject
+当调用`resolve`时, 其参数是要传出去的数据, 其效果是把所在的这个 ***promise*** **实例** 的状态改成 **fulfilled**  
+当调用`reject`时, 其参数是错误信息, 其效果是把所在的这个 ***promise*** **实例** 的状态改成 **rejected**  
+
+**注意**:
+  + 这两个函数**不能**类比 ***return***! 函数还会继续走完
+  + 这两个函数只干两件事:  
+    1. 修改状态
+    2. 传递数据
+  + 修改状态只能改未完成的状态, 也就是说, `resolve`和`reject` **哪个在前面哪个生效**  
+  
+### then和catch
+他们能感知他们对应的 ***promise*** **实例** 的状态  
+他们的参数是回调函数的函数名  
+`M.then(f)`或是`M.catch(f)`  
+当M转变成**Fulfilled**状态时,***then***就被送入 *"微任务"*  
+当 "*宏任务*" 完成后, ***then***将`M`的`resolve`传递出的数据作为参数传递给回调函数  
+***catch***同理  
+  
+**注意**: `then`和`catch`本身也是 ***promise*** **实例**
+
+## JS引擎的执行顺序 
+明确: **JS 执行机制是单线程**  
+
+### 同步任务和异步任务
+JS有一个**Event Loop**的概念, 可以理解为*手头正要做的事*  
+JS的主线程就会按着上面登记的任务一个个完成  
+如果任务出了问题, JS就报错, 停止, 产生**卡死现象**  
+任务有一个简单的分类:  
+  + 同步任务
+  + 异步任务
+
+同步进入**主线程**，异步进入**Event Table**  
+这个**Event Table**可以理解为*任务规划表*  
+上面登记的内容是一些函数和ta对应的出场条件  
+当满足条件时, 这个函数会作为一项任务推入 **Event Queue**  
+**Event Queue**可以理解为*待办清单*  
+主进程空闲后, 就把**Event Queue**全部放到主进程中
+
+> 打个比喻(纯粹是假想的, 只是用于理解记忆):  
+> **主进程**: `["做作业()", "准备开始吃中饭()"]`  
+> **Event Table**: `[["4点", "买菜()"], ["5点", "烧菜()"], ["6点", "吃晚饭()"]]`  
+> **Event Queue**: `[["吃饭前", "打开手机()"], ["吃饭时", "看下饭视频()"]]`
+
+### 宏任务和微任务
+**主进程**更细分来看, 其实还能划分成**宏任务**和**微任务**
+  + **macro-task**(**宏任务**)：包括整体代码script，setTimeout，setInterval
+  + **micro-task**(**微任务**)：Promise，process.nextTic
+
+### 总结
+按顺序排下来
+  1. 主进程
+  2. 宏任务
+  3. 微任务
+  4. 装载**Event Queue**到主进程
+  5. 回到第2步
 
 # 实/常/有 用的函数
 ## 时间戳
@@ -506,6 +601,26 @@ var deepCopy = function (source,isArray) {
 }
 ```
 
+> 获取最底层的document文档对象
+- **作用:** 该函数会返回 document 为最底层的 iframe 父页面的文档对象，从而避免了在多层嵌套 iframe 中访问元素时出现的问题  
+- **备注:** 并不改变现在的document, 因为document是只读的
+```
+/**
+ * 获取最顶层的文档对象。
+ *
+ * @returns {Document} 最顶层的文档对象。
+ */
+function getBaseDocument() {
+    var currentWindow = window;
+
+    while (currentWindow !== currentWindow.parent) {
+        currentWindow = currentWindow.parent;
+    }
+
+    return currentWindow.document;
+}
+```
+
 > 直接无提示关闭页面
 - **作用:** 同上, 用js实现
 - **备注:** 无提示
@@ -529,6 +644,75 @@ for (let i = 1; i <= end; i++) {
     clearInterval(i);
 }
 ```
+
+> 获取指定名称的 cookie 值
+```
+getCookie = name => `; ${document.cookie}`.split(`; ${name}=`).pop().split(';').shift()
+```
+
+> 获取URL中指定名称的值
+- **备注:** 没有找到就返回false
+```
+getQueryVariable = (variable) => {
+    let q = window.location.search.substring(1),
+        v = q.split("&"),
+        r = false;
+    for (let i = 0, l = v.length; i < l; i++) {
+        let p = v[i].split("=");
+        p[0] == variable && (r = p[1]);
+    }
+    return r;
+}
+```
+
+> 睡眠函数
+```
+function sleep(interval) {
+    return new Promise((success, fail) => {
+        setTimeout(success, interval);
+    });
+}
+```
+
+> 简易的md转html
+- **备注:** 因为多行文字要用模板字符串, 所以代码块的标识符用了`$`, 切记切记
+```
+var md2html = function(md) {
+    // 分别替换两个尖括号
+    md = md.replace(/</gm, "&lt;");
+    md = md.replace(/>/gm, "&gt;");
+
+    // 加粗
+    md = md.replace(/\*\*(.+?)\*\*/gm, "<strong>$1</strong>");
+
+    // 代码
+    md = md.replace(/\$(.+?)\$/gm, "<code>$1</code>");
+
+    // 链接
+    md = md.replace(/\[(.+?)\]\((.+?)\)/gm, "<a target='_blank' href='$2'>$1</a>");
+
+    // 句子中间的多个空格替换为html中相同数量的空格
+    md = md.replace(/  /gm, "&nbsp;&nbsp;");
+
+    // 一级标题
+    md = md.replace(/^# (.+?)$/gm, "<h1>$1</h1>");
+
+    // 二级标题
+    md = md.replace(/^## (.+?)$/gm, "<h2>$1</h2>");
+
+    // 三级标题
+    md = md.replace(/^### (.+?)$/gm, "<h3>$1</h3>");
+
+    // 其余的行前后加上p标签, 如果一行的末尾有2个空格则在末尾加上<br>
+    md = md.replace(/^(.+?)$/gm, "<p>$1</p>");
+    md = md.replace(/<p>(.+?)  <\/p>/gm, "<p>$1</p><br>");
+
+    return md;
+
+}
+
+```
+
 
 # 参考来源
 1. [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
